# University

./: README.md
Year 1/Semester 1/Computer Systems Architecture/lab11/: lab11_v2.asm  lab11_v2.lst  subsecventa.asm  subsecventa.lst
Year 1/Semester 1/Computer Systems Architecture/lab8/: lab8_1.asm  lab8_1.lst  lab8_2.asm  lab8_2.lst
Year 1/Semester 1/Computer Systems Architecture/probapractica/: proba_practica.asm  proba_practica.lst
Year 1/Semester 2 /Data Structures And Algorithms/lab1/: App.cpp  CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestScurt.cpp
Year 1/Semester 2 /Data Structures And Algorithms/lab3/: CMakeLists.txt
Year 1/Semester 2 /Data Structures And Algorithms/lab3/TAD Coada cu Prioritati/Proiect C++/: CP.cpp  CP.h
Year 1/Semester 2 /Data Structures And Algorithms/lab3/TAD Coada cu Prioritati/Teste/: TestScurt.cpp
Year 1/Semester 2 /Data Structures And Algorithms/lab4/: CMakeLists.txt  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h  TestScurt.cpp
Year 1/Semester 2 /Data Structures And Algorithms/lab6/: CMakeLists.txt  IteratorMD.cpp  IteratorMD.h  MD.cpp  MD.h  TestExtins.cpp  TestScurt.cpp
Year 1/Semester 2 /Data Structures And Algorithms/lab7/: CMakeLists.txt
Year 1/Semester 2 /Data Structures And Algorithms/lab7/TAD Matrice/Proiect C++/: App.cpp  Iterator.cpp  Iterator.h  Matrice.cpp  Matrice.h
Year 1/Semester 2 /Data Structures And Algorithms/lab7/TAD Matrice/Teste/: TestExtins.cpp  TestScurt.cpp
Year 1/Semester 2 /Graph Algorithms/lab01/: citire.txt  main.cpp  main2.cpp
Year 1/Semester 2 /Graph Algorithms/lab02/: main.cpp
Year 1/Semester 2 /Graph Algorithms/lab03/: main.cpp
Year 1/Semester 2 /Graph Algorithms/untitled/: main.cpp
Year 1/Semester 2 /Object Oriented Programming/: CMakeLists.txt  FileRepo.cpp  FileRepo.h  GUI.cpp  GUI.h  Locatari.cpp  Locatari.h  RepoLocatari.cpp  RepoLocatari.h  ServiceLocatari.cpp  ServiceLocatari.h  Undo.cpp  Undo.h  ValidatorLocatar.h  cosuri.cpp  cosuri.h  main.cpp  model.h  observer.h  reponotify.h  servy_notif.cpp  servy_notif.h  teste.cpp  teste.h  ui.cpp  ui.h
Year 1/Semester 2 /Object Oriented Programming/lab10/: CMakeLists.txt
Year 1/Semester 2 /Object Oriented Programming/lab2_4/: entitate.c  (+5 more)
Year 1/Semester 2 /Object Oriented Programming/lab6_7 - Copy/: CMakeLists.txt  Locatari.h  RepoLocatari.cpp  RepoLocatari.h  ServiceLocatari.cpp  ServiceLocatari.h  teste.cpp  teste.h  ui.cpp  ui.h
Year 1/Semester 2 /Object Oriented Programming/lab6_7 - Copy/lab2_4/: CMakeLists.txt  entitate.h  lista.h  main  main.c  teste.c  validator.h
Year 2/Semester 4/Ingineria sistemelor soft/: Use_case_templateSMMS.docx  Video
Year 2/Semester 4/Sisteme de gestiune a Bazelor de Date/: Cerinta
(+371 files in other folders)
