cmake_minimum_required(VERSION 3.28)
project(lab6_7)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab6_7 main.cpp
        Locatari.h
        Locatari.cpp
        RepoLocatari.h
        RepoLocatari.h
        RepoLocatari.cpp
        ServiceLocatari.h
        ServiceLocatari.cpp
        ValidatorLocatar.h
        ui.h
        ui.cpp
        teste.h
        teste.cpp
)
